Fixed logo being stuck at the top of the page

--- a/assets/scss/_layout.scss
+++ b/assets/scss/_layout.scss
@@ -125,7 +125,7 @@ hr {
   }
 
   @media all and (max-width: 939px) {
-    position: fixed;
+    position: absolute;
     left: 35px;
   }
 }
